-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Execution
-
Fully Compatible
-
ALL
-
QE 2023-02-20
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/src/mongo/db/exec/sbe/stages/ix_scan.h:156: UNINIT_CTOR 134929 Class member declaration for "_entry".
/src/mongo/db/exec/sbe/stages/ix_scan.cpp:65: UNINIT_CTOR 134929 Non-static class member "_entry" is not initialized in this constructor nor in any functions that it calls.