SERVER-73296: Initialize the index entry field to null in ix_scan.h